--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+dependency_overrides:
+  camera_avfoundation: 0.9.19+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
